tests/diagnostics_golden/diag_loop_variant_not_derivable.txt
Diagnostics Golden: Loop Variant Not Derivable
Source: tests/negative/neg_while_variant_not_derivable.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_while_variant_not_derivable.safe:16:13: error: current proof surface cannot derive a supported Loop_Variant from this while condition
  |
  | 16 |       while Value < Goal loop
  |    |             ^~~~~~~~~~~~
  |
  note: supported while-loop proof shapes are structural `Cursor != null` traversal and simple integer-bound `Lo < Hi` / `Lo <= Hi` conditions.
  note: rewrite the loop to match one of those forms, or use a different construct whose termination proof does not depend on an emitted Loop_Variant.
------------------------------------------------------------------------
